# English-tutor-agent

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  restore-layout.py  restore-layout.sh  run.py  save-layout.py  save-layout.sh  start-tutor.sh  sway-english-tutor.conf  sway-layout.conf  workspace-layout.json
camera_tutor/: __init__.py  audio_io.py  avatar.py  camera.py  dashboard_server.py  decision_engine.py  demo.py  dialogue.py  live2d_bridge.py  live2d_renderer.cpp  omni_client.py  parent_report.py  projection.py  scenario_demos.py  scene_analyzer.py
camera_tutor/static_parent/: index.html
docs/: DEPLOYMENT_GUIDE.md  HARDWARE_BOM.md  HARDWARE_VALIDATION.md  LEARNING_THEORY.md  MARKET_RESEARCH.md  PRODUCT_DOC.md  PRODUCT_VISION.md  SETUP_GUIDE.md  TECH_STACK_RATIONALE.md  USER_TEST_PLAN.md  USER_TEST_REPORT.md  UX_DESIGN.md
english_tutor/: __init__.py  cli.py  content_loader.py  immersion_mode.py  llm_client.py  memory.py  reading_mode.py  review_mode.py  spaced_repetition.py  stt.py  tts.py  tutor_prompt.py  web_server.py
english_tutor/static/: index.html
scripts/: build_live2d_linux.sh
